--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint . --fix",
+    "test": "jest",
     "coverage": "jest --testPathPattern=./src/ --coverage",
     "e2e": "jest --testPathPattern=./e2e/ --runInBand",
     "preshow:coverage": "npm run coverage",
@@ -26,6 +27,7 @@
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "eslint": "^8.41.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "file-loader": "^6.2.0",
     "html": "^1.0.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
@@ -42,6 +45,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
     "puppeteer": "^20.4.0",
+    "raw-loader": "^4.0.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
